--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Agora</title>
@@ -8,7 +9,126 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
+<br>
+
+<footer>
+  <div class="footer-top p-y-2">
+    <div class="container-fluid">
+      <div class="row">
+      </div>
+      <!--col-md-2-->
+    </div>
+  </div>
+  </div>
+  <div class="footer-middle">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Address</h4>
+            <address>
+              <ul class="list-unstyled">
+                <li>
+                  City Hall
+                  <br> 212 Street
+                  <br> Lawoma
+                  <br> 735
+                  <br>
+                </li>
+                <li>
+                  Phone: 0
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Popular Services</h4>
+            <ul class="list-unstyled text-muted">
+              <li>
+                <a href="#"></a>
+              </li>
+              <li>
+                <a href="#">Payment Center</a>
+              </li>
+              <li>
+                <a href="#">Contact Directory</a>
+              </li>
+              <li>
+                <a href="#">Forms</a>
+              </li>
+              <li>
+                <a href="#">News and Updates</a>
+              </li>
+              <li>
+                <a href="#">FAQs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Website Information</h4>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#">Website Tutorial</a>
+              </li>
+              <li>
+                <a href="#">Accessibility</a>
+              </li>
+              <li>
+                <a href="#">Disclaimer</a>
+              </li>
+              <li>
+                <a href="#">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#">FAQs</a>
+              </li>
+              <li>
+                <a href="#">Webmaster</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <!--Column1-->
+          <div class="footer-pad">
+            <h4>Popular Departments</h4>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#">Parks and Recreation</a>
+              </li>
+              <li>
+                <a href="#">Public Works</a>
+              </li>
+              <li>
+                <a href="#">Police Department</a>
+              </li>
+              <li>
+                <a href="#">Fire</a>
+              </li>
+              <li>
+                <a href="#">Mayor and City Council</a>
+              </li>
+              <li>
+                <a href="#"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
 </html>
